fix: review handling of selections in CriteriaHelper